    - upstream/vulkan-include.patch: drop, merged upstream.
    - system/clang-format.patch: drop it; we broke it some time ago, and
      didn't notice. Guess we don't need it?
    - bookworm/clang16.patch: refresh.
    - fixes/bad-font-gc00000.patch: refresh
    - fixes/bad-font-gc11.patch: refresh
    - fixes/bad-font-gc2.patch: refresh
    - upstream/quiche-deque.patch: gcc build fix pulled from upstream.
    - upstream/gpu-header.patch: add header build fix from upstream.
    - upstream/blink-header.patch: add header build fix from upstream.
    - upstream/blink-header2.patch: add header build fix from upstream.
    - upstream/blink-header3.patch: add header build fix from upstream.
    - upstream/realtime-reporting.patch: gcc build fix from upstream.
    - upstream/urlvisit-header.patch: add header build fix from upstream.
    - upstream/accessibility-format.patch: gcc build fix from upstream.
    - bookworm/urlhelper-ctor.patch: work around a clang-16 bug; add an
      explicit constructor).

  [ Timothy Pearson ]
  * d/patches/ppc64le:
    - sandbox/0008-sandbox-fix-ppc64le-glibc234.patch: Modify for upstream
      changes
    - third_party/0002-Add-PPC64-generated-files-for-boringssl.patch: Modify
      for upstream changes
    - libaom/0001-Add-pregenerated-config-for-libaom-on-ppc64.patch: Refresh
      for upstream changes

 -- Andres Salomon <dilinger@debian.org>  Thu, 30 May 2024 22:11:26 -0400

chromium (125.0.6422.141-1) unstable; urgency=high

  * New upstream security release.
    - CVE-2024-5493: Heap buffer overflow in WebRTC.
      Reported by Cassidy Kim(@cassidy6564).
    - CVE-2024-5494: Use after free in Dawn. Reported by wgslfuzz.
    - CVE-2024-5495: Use after free in Dawn. Reported by wgslfuzz.
    - CVE-2024-5496: Use after free in Media Session.
      Reported by Cassidy Kim(@cassidy6564).
    - CVE-2024-5497: Out of bounds memory access in Keyboard Inputs.
      Reported by zh1x1an1221 of Ant Group Tianqiong Security Lab.